Scaleway/04-applications/04-services/keycloak/06-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8081
      targetPort: 8080
      protocol: TCP
