Scaleway/04-applications/04-services/keycloak/07-service-admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-admin-service
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    service.beta.kubernetes.io/do-not-expose: "true"
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: management
      port: 9000
      targetPort: 9000
      protocol: TCP
